name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , clay == 0.15.0
                  , pandoc == 3.0.1
  ghc-options:      -threaded
  default-language: Haskell2010
